# eat-swift-from-cpp

./: CMakeLists.txt  Lib.swift  Makefile  README.markdown  main.cc
.github/workflows/: build.yml
cmake/: AddSwift.cmake  InitSwift.cmake
